add product with category, mapping user role, products on homepage